--- a/projectproposal.ipynb
+++ b/projectproposal.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "id": "f9c5a713-d382-46f7-9ec2-2b51e78736d9",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "id": "10c1e242-eb18-4752-b1c6-012e4d4cd65f",
    "metadata": {},
    "outputs": [
@@ -216,13 +216,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "id": "b006d3b6-d09f-4bd9-9cf3-bba7f388a684",
    "metadata": {},
    "outputs": [],
    "source": [
-    " # Splitting the data\n",
+    "# Splitting the data, we will be splitting to 75% and 25%, with strata = num to keep the distribution consistent\n",
     "set.seed(1)\n",
+    "# we set seed to keep this consistent when others run it\n",
     "heart_split <- initial_split(heart_disease, prop = 0.75, strata = num)\n",
     "heart_train <- training(heart_split)\n",
     "# will not be used\n",
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "id": "b5a2c491-c9ad-4d03-858c-26fa6fd38835",
    "metadata": {},
    "outputs": [
@@ -338,14 +339,15 @@
    },
    "source": [
     "### Visualization\n",
-    "The first plot is a boxplot showing the distribution of cholesterol for patients with or without blood sugar levels over 120 mg/dl. It is grouped with the heart disease presence or absence, and it shows that people with higher blood sugar had more cholesterol, and people with heart disease also had higher medians of cholesterol.\n",
     "\n",
-    "The second plot shows use a scatter plot that is grouped for the patients diagnosed with heart disease and those that are not, against the total amount of cholesterol in their blood and age. From the graph only, we do not see much correlation with high cholesterol with the presence and absence of heart disease and age, but further analysis may show otherwise. This shows us an correlation between predictors, and we will still use cholesterol and age as a predictor."
+    "The first plot is a bar chart that shows the distribution of high blood sugar and if they have heart disease or not. This shows that There was a higher percentage presence of heart disease for patients with high blood sugar, which the next plot also describes.\n",
+    "\n",
+    "The second plot is a boxplot showing the distribution of cholesterol for patients with or without blood sugar levels over 120 mg/dl. It is grouped with the heart disease presence or absence, and it shows that people with higher blood sugar had more cholesterol, and people with heart disease also had higher medians of cholesterol, which points to them being good predictors of heart disease as there is a correlation that can be inferred. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "id": "0c8b45d2-ea0d-4483-87f9-36ff489b72bf",
    "metadata": {},
    "outputs": [
@@ -457,7 +459,8 @@
    "id": "26558522-209b-4a31-8163-f6167be9dd1b",
    "metadata": {},
    "source": [
-    "We expected to find age as a leading predictor for heart disease. We also expect blood sugar levels to be a good predictor for specific heart disease too. The impact of this could be very beneficial.  For example, people could be screened for high blood sugar levels as they get older to prevent heart disease, using the classification model. If a person is older and is found to have high blood sugar, they could adapt a healthier lifestyle and prevent a heart attack or other disaster, or use the model the determine their likelyhood of having heart disease. Some future questions this could lead to include why age leads to an increased risk of heart disease, and how to help people who are genetically predisposed to have higher levels of cholesterol.\n"
+    "We expect to whether or not we can accurately predict heart disease thorugh 4 criteria that we have mentioned, and if it can be implemented in real life as diagnosis for patients by measuring their predictors. We expect specific predictors to have higher affect on the possibility of getting heart disease, and this can impact the way each disgnosis for heart disease is treated: if cholesterol turns out to have limited affect on the possibility of heart disease, it may not be considered as much of an important factor to diagnose heart disease. If we are able to create an model that is very accurately able to predict heart disease just out of these predictors, the benefit can be immense to quickly diagnose patients before their heart disease develops to a dangerous level.This could lead to furture questions like how and why does the specific predictors have more impact than others? What other predictors could have been better to train the model? What other ways can we increase the accuracy of the model?\n",
+    "\n"
    ]
   }
  ],
