Reference, Discussion, and Intro
Added Refrence and Discussion and updated intro

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -30,26 +30,25 @@
    "id": "d14d2170-5ea1-44f8-816b-6188894bd154",
    "metadata": {},
    "source": [
-    "\n",
     "We are trying to answer the question:\n",
-    "- Is it possible to predict the result of a heart disease diagnosis of a patient based on a patient's cholesterol levels, blood pressure and age through classification? \n",
+    "\n",
+    "Is it possible to predict the result of a heart disease diagnosis of a patient based on a patient's cholesterol levels, blood pressure and age through classification?\n",
     "\n",
     "We will be using the Heart Disease dataset from UCI, linked here:\n",
-    "https://archive.ics.uci.edu/ml/datasets/Heart+Disease\n",
-    "Specifically, we used the Cleveland Processed Data,\n",
-    "https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.cleveland.data\n",
     "\n",
+    "https://archive.ics.uci.edu/ml/datasets/Heart+Disease Specifically, we used the Cleveland Processed Data, https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.cleveland.data\n",
     "This dataset was taken from the UCI machine learning repository, specifically the Cleveland dataset which takes data of patients from Long Beach and Cleveland Clinic Foundation, taken in 1988.\n",
     "\n",
-    "The dataset contains data regarding heart disease patients and relavant information such as sex, age, cholesterol, max heart rate and more. Other columns include more technical terms, but many we will not be using as predictors. More information on our predictors will follow.\n",
+    "The dataset contains data regarding heart disease patients and relevant information such as sex, age, cholesterol, max heart rate and more. Other columns include more technical terms, however, many of them will not be used as predictors. More information on our predictors will follow.\n",
     "\n",
-    "Heart disease refers to several types of heart related sicknesses such as heart attacks, unstable angina and may more. This data set categorizes the result of the patient's diagnosis to 4 types of categories: typical angina, atypical angina, non-anginal pain, and asymptomatic. We will be generalizing this to presence and absence of heart disease, asymptomatic being absence and the rest being presence of heart disease.\n",
+    "Heart disease refers to several types of heart related sicknesses including heart attacks, unstable angina and much more. This data set categorizes the result of the patient's diagnosis to 4 types of categories: typical angina, atypical angina, non-anginal pain, and asymptomatic. We will be generalizing this to presence and absence of heart disease, with asymptomatic being absence and the rest being presence of heart disease.\n",
     "\n",
     "Our variables of interest:\n",
-    "- age: age of the patient recorded\n",
-    "- cholesterol: Serum cholesterol, or total cholesterol recorded in mg/dl in each patient\n",
-    "- rbp: resting blood pressure, blood pressure of patient at rest\n",
-    "- disease: the result of diagnosis for heart disease, we will categorize 0 to be absence and 1-4 to be presence, ignoring the stage and severity of the heart disease."
+    "\n",
+    "age: age of the patient recorded\n",
+    "cholesterol: Serum cholesterol, or total cholesterol recorded in mg/dl in each patient\n",
+    "rbp: resting blood pressure, blood pressure of patient at rest\n",
+    "disease: the result of diagnosis for heart disease, we will categorize 0 to be absence and 1-4 to be presence, ignoring the stage and severity of the heart disease."
    ]
   },
   {
@@ -998,12 +997,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5f521334-cd3c-4680-ba69-288c4fc76f57",
+   "cell_type": "markdown",
+   "id": "3578ebab-f55d-4d4e-aad9-32d50b3432ae",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The data analysis shows that as age and resting blood pressure increase, so does the proportion of heart disease in a population - suggesting there to be a positive relationship. For example, a 50 year old with a resting blood pressure of 110 mmHg is significantly less likely to have heart disease than a 70 year old with 160mmHg resting blood pressure. In addition to this, the amount of blood cholesterol has a positive relationship with developing heart disease: the higher the blood cholesterol, the more likely it is the individual has heart disease. These findings agree with the literature. The heart weakens as a person ages; and a higher resting blood pressure is a measure of how fast the heart is pumping blood through the body, meaning, it’s logical to assume that higher blood pressure could lead to heart disease since the heart is working harder. Higher blood cholesterol being correlated with the presence of heart disease is expected as well, since the heart has to work harder to pump blood through smaller arteries. These findings could help prevent heart disease. While you can't prevent getting older, you can live a healthy lifestyle to keep your resting blood pressure and blood cholesterol levels low. In the future, possible research questions include specific and effective ways to lower resting blood pressure and blood cholesterol, or if certain people are genetically predisposed to higher levels of cholesterol and RBP, and therefore, predisposed to heart disease.\n",
+    "\n",
+    "Despite our predictors being strong indicators for heart disease, we have a low accurate prediction rate when testing on the testing data at 65%. A reason that may explain this low prediction rate is [ADD MORE HERE]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1046,15 +1047,19 @@
    "id": "3faa281c-ed4c-4eab-8531-b19239936784",
    "metadata": {},
    "source": [
-    "   Centers for Disease Control and Prevention. (2021, May 18). High blood pressure symptoms and causes. Centers for Disease Control and Prevention. Retrieved April 6, 2023, from https://www.cdc.gov/bloodpressure/about.htm#:~:text=High%20blood%20pressure%20can%20damage%20your%20arteries%20by%20making%20them,Chest%20pain%2C%20also%20called%20angina. \n",
-    "   \n",
-    "   Centers for Disease Control and Prevention. (2022, June 20). Diabetes and your heart. Centers for Disease Control and \n",
-    "Prevention. Retrieved April 6, 2023, from https://www.cdc.gov/diabetes/library/features/diabetes-and-heart.html#:~:text=Over%20time%2C%20high%20blood%20sugar,and%20can%20damage%20artery%20walls. \n",
+    "Data Set:\n",
     "\n",
-    "   Cleveland Clinic. (n.d.). High cholesterol: Causes, symptoms and how it affects the body. Cleveland Clinic. Retrieved April 6, 2023, from https://my.clevelandclinic.org/health/articles/11918-cholesterol-high-cholesterol-diseases \n",
-    "   \n",
-    "   U.S. Department of Health and Human Services. (2018, June 1). Heart health and aging. National Institute on Aging. \n",
-    "Retrieved April 6, 2023, from https://www.nia.nih.gov/health/heart-health-and-aging   "
+    "University of California Irvine. (n.d.). Heart Disease Data Set. UCI Machine Learning Repository: Heart disease data set. Retrieved April 11, 2023, from https://archive.ics.uci.edu/ml/datasets/Heart+Disease\n",
+    "\n",
+    "Literature:\n",
+    "\n",
+    "Centers for Disease Control and Prevention. (2021, May 18). High blood pressure symptoms and causes. Centers for Disease Control and Prevention. Retrieved April 6, 2023, from https://www.cdc.gov/bloodpressure/about.htm#:~:text=High%20blood%20pressure%20can%20damage%20your%20arteries%20by%20making%20them,Chest%20pain%2C%20also%20called%20angina.\n",
+    "\n",
+    "Centers for Disease Control and Prevention. (2022, June 20). Diabetes and your heart. Centers for Disease Control and Prevention. Retrieved April 6, 2023, from https://www.cdc.gov/diabetes/library/features/diabetes-and-heart.html#:~:text=Over%20time%2C%20high%20blood%20sugar,and%20can%20damage%20artery%20walls.\n",
+    "\n",
+    "Cleveland Clinic. (n.d.). High cholesterol: Causes, symptoms and how it affects the body. Cleveland Clinic. Retrieved April 6, 2023, from https://my.clevelandclinic.org/health/articles/11918-cholesterol-high-cholesterol-diseases\n",
+    "\n",
+    "U.S. Department of Health and Human Services. (2018, June 1). Heart health and aging. National Institute on Aging. Retrieved April 6, 2023, from https://www.nia.nih.gov/health/heart-health-and-aging"
    ]
   }
  ],
