--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -27,6 +27,8 @@
    "id": "d14d2170-5ea1-44f8-816b-6188894bd154",
    "metadata": {},
    "source": [
+    "One of the leading causes of death globally is heart disease. While there are many treatments available for different kinds of heart disease, the most important step for a treatment is the initial diagnosis. Hence, it’s paramount that physicians and other health care professionals have access to a program that can predict heart disease using data that is readily available.\n",
+    "\n",
     "We are trying to answer the question:\n",
     "\n",
     "Is it possible to predict the result of a heart disease diagnosis of a patient based on a patient's cholesterol levels, blood pressure and age through classification?\n",
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "7371706c-69d5-4d04-8264-f663b02ef410",
    "metadata": {},
    "outputs": [
@@ -93,6 +95,69 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.8     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘ggplot2’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘tidyr’ was built under R version 4.1.2”\n",
+      "Warning message:\n",
+      "“package ‘readr’ was built under R version 4.1.2”\n",
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.1.3”\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘tidymodels’ was built under R version 4.1.3”\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
+      "\n",
+      "Warning message:\n",
+      "“package ‘broom’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘dials’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘scales’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘infer’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘modeldata’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘parsnip’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘recipes’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘rsample’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘tune’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘workflows’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘workflowsets’ was built under R version 4.1.3”\n",
+      "Warning message:\n",
+      "“package ‘yardstick’ was built under R version 4.1.3”\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
+      "\n",
       "Updating HTML index of packages in '.Library'\n",
       "\n",
       "Making 'packages.html' ...\n",
@@ -137,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "5dc26c6a-0dbd-430b-82cd-45f36bb1eca6",
    "metadata": {},
    "outputs": [
@@ -277,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "378e11bf-93af-4336-baf6-1997aabfbaee",
    "metadata": {},
    "outputs": [],
@@ -300,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "952dac74-1fcb-4cc3-95dc-16f2cc3e3d44",
    "metadata": {},
    "outputs": [],
@@ -326,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "69ee7f0f-74f7-491f-8561-4e99c123b2b0",
    "metadata": {},
    "outputs": [
@@ -428,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "264ba44a-56fd-4501-97a3-e899499c0f73",
    "metadata": {},
    "outputs": [
@@ -475,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "8d741648-3d3c-4b7e-af1a-151b6e61ccba",
    "metadata": {},
    "outputs": [
@@ -550,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "dedafdd9-6d44-4ea1-8859-f39af3de73a2",
    "metadata": {},
    "outputs": [],
@@ -574,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "934a7216-0ac6-4066-bc95-15de34318b96",
    "metadata": {},
    "outputs": [],
@@ -601,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "c047e275-7645-4bcd-a204-f501ddd5a575",
    "metadata": {},
    "outputs": [
@@ -695,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "daac6e2e-8003-4947-90c7-5cb8edd2b46f",
    "metadata": {},
    "outputs": [
@@ -728,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "489da82a-5c35-43a2-b054-c3a1f1586ff8",
    "metadata": {},
    "outputs": [
@@ -766,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "e80ffc21-917b-46b0-b11f-15eb35b17ffb",
    "metadata": {},
    "outputs": [
@@ -869,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "16bd92f8-89c3-4e66-a180-b967c54909de",
    "metadata": {},
    "outputs": [
@@ -946,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "26b7a020-8af4-49be-b384-587fea62da7d",
    "metadata": {},
    "outputs": [
@@ -979,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "da7dc9e3-c16d-40a0-a53c-3eda888b2271",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "58df1662-717e-4b49-a924-72a98f556e43",
    "metadata": {},
    "outputs": [
@@ -1110,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "7de971e7-5d52-4847-9c8d-1035baab0359",
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "28b3cd0f-7971-4afa-8bbd-2b09a28aaab8",
    "metadata": {},
    "outputs": [],
@@ -1146,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "77b77efa-df26-4f2c-8dfe-02e230e9a5a4",
    "metadata": {},
    "outputs": [],
@@ -1164,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "540a893f-ec6f-4c18-866e-c21e08267dc7",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "id": "47e784de-8f63-41e8-b270-f8531551dcef",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "3d804d70-5746-4995-b990-16a4504ad5c1",
    "metadata": {},
    "outputs": [
@@ -1313,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "d03a4a4d-e453-4f9c-b5b6-d01e2d76bc2a",
    "metadata": {},
    "outputs": [
