Added new category

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "fc1bb13f-46cb-4d43-a232-c058ae5e6d60",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": [],
     "toc-hr-collapsed": true
    },
